src/objects/C501_Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment Schedule</label>
        <referenceTo>C501_Appointment_Schedule__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointments_Full__c</fullName>
        <formula>C501_Scheduled_Appointments__c &gt;=  Maximum_Scheduled_Appointments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointments Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appointments_Max_per_Month__c</fullName>
        <formula>Appointment_Schedule__r.Number_Appointments_per_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointments Max per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Time__c</fullName>
        <label>Available Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>C501_Scheduled_Appointments__c</fullName>
        <label>Scheduled Appointments</label>
        <summaryForeignKey>C501_Appointment_Scheduled__c.C501_Appointment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Scheduled_Appointments__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Maximum Scheduled Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Unique__c</fullName>
        <description>Unique Name to prevent more than 1 appointment for same day and time</description>
        <label>Name Unique</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Senior_Only_Appointments_60_and_over__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Senior Only Appointments (60 and over)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <formula>Time__c + &quot; (&quot; + TEXT(Maximum_Scheduled_Appointments__c - C501_Scheduled_Appointments__c) + &quot; Remaining)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Appointment_Schedule__c</columns>
        <columns>Appointments_Full__c</columns>
        <columns>Available_Time__c</columns>
        <columns>Date__c</columns>
        <columns>Enable__c</columns>
        <columns>Maximum_Scheduled_Appointments__c</columns>
        <columns>C501_Scheduled_Appointments__c</columns>
        <columns>Senior_Only_Appointments_60_and_over__c</columns>
        <columns>Summary__c</columns>
        <columns>Appointments_Max_per_Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Templates</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Template</value>
        </filters>
        <label>All Templates</label>
    </listViews>
    <listViews>
        <fullName>Custom_By_Date</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>12/5/2019</value>
        </filters>
        <label>Custom By Date</label>
    </listViews>
    <nameField>
        <label>Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>